# node-addon-example

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  main.js  package.json
cmake/: FindNode.cmake
src/: main_window.cpp  main_window.h  node_addon.cpp  node_addon.h
